--- a/public/themes/martfury/css/homepage.css
+++ b/public/themes/martfury/css/homepage.css
@@ -460,7 +460,7 @@ ul.privacypl li a:hover {
 .snakbase-area {
     display: block;
     position: relative;
-    margin: 50px 0;
+    /*margin: 50px 0;*/
     background: #f7f0c8
 }
 
@@ -1362,4 +1362,7 @@ ul.privacypl li a:hover {
 }
 #heroBanner .carousel-item:before{
     content: none;
+}
+#SnackIt{
+    padding: 64px;
 }
