--- a/public/themes/martfury/css/homepage.css
+++ b/public/themes/martfury/css/homepage.css
@@ -128,7 +128,7 @@
 }
 
 .footer-area [class^=col-] div {
-    padding: 35px 0 0
+    /* padding: 35px 0 0 */
 }
 
 .footer-area [class^=col-]:nth-child(2) div {
@@ -148,7 +148,7 @@
 
 .footer-area [class^=col-]:first-child div {
     display: block;
-    padding: 35px 0 5px
+    /* padding: 35px 0 5px; */
 }
 
 .footer-area [class^=col-]:nth-child(4) p {
@@ -356,9 +356,8 @@ ul.privacypl li a:hover {
     font-family: Roboto, sans-serif;
     font-size: 15px;
     margin: 0px 0 5px;
-    z-index: 100;
     position: relative;
-    top: -25px;
+    /* top: -25px; */
 }
 
 #indxproductsale .item div p, .ps-product div p {
@@ -464,19 +463,8 @@ ul.privacypl li a:hover {
 .snakbase-area {
     display: block;
     position: relative;
-    /*margin: 50px 0;*/
-    background: #f7f0c8
-}
-
-.snakbase-area:after {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 42%;
-    background: #f5d002 url("../img/bg-chips.jpg") no-repeat bottom left;
-    background-blend-mode: multiply
+    padding: 20px 0;
+    background: #f7f0c8;
 }
 
 .snakbase-area [class^=col-] .nav-holder {
@@ -485,12 +473,17 @@ ul.privacypl li a:hover {
 }
 
 .nav-holderinner {
-    width: 200px;
-    text-transform: uppercase
+    margin-bottom: 20px;
+    text-transform: uppercase;
 }
 
 .nav-holderinner .nav-link {
-    font-size: 18px
+    margin: 0 30px;
+    padding: 0 0 5px;
+    font-size: 16px;
+    line-height: 16px;
+    color: #212529;
+    transition: none;
 }
 
 .nav-holderinner .nav-link i {
@@ -498,9 +491,11 @@ ul.privacypl li a:hover {
 }
 
 .nav-holderinner .nav-pills .nav-link.active, .nav-holderinner .nav-pills .show > .nav-link {
-    background-color: #000;
-    color: #f5d002;
-    border-radius: 25px
+    background-color: transparent;
+    color: inherit;
+    font-weight: bold;
+    border-bottom: 2px solid black;
+    border-radius: 0;
 }
 
 .snakbase-area h2 {
@@ -539,8 +534,8 @@ ul.privacypl li a:hover {
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
-    -webkit-line-clamp: 6; /* number of lines to show */
-    line-clamp: 6;
+    -webkit-line-clamp: 3; /* number of lines to show */
+    line-clamp: 3;
     -webkit-box-orient: vertical;
 }
 
@@ -1121,7 +1116,7 @@ ul.privacypl li a:hover {
     }
 
     .footer-area [class^=col-]:first-child div {
-        padding: 25px 0 0 0
+        /* padding: 25px 0 0 0 */
     }
 
     .inner-banner img {
@@ -1198,7 +1193,7 @@ ul.privacypl li a:hover {
     }
 
     .snakbase-area {
-        margin: 25px 0
+        padding: 25px 0;
     }
 
     .snakbase-area:after {
@@ -1212,8 +1207,7 @@ ul.privacypl li a:hover {
     }
 
     .nav-holderinner {
-        margin: 0 auto;
-        text-align: center
+        text-align: center;
     }
 
     .snakbase-area [class^=col-]:last-child .tab-content {
@@ -1276,6 +1270,7 @@ ul.privacypl li a:hover {
     padding: 0px 0 !important;
     transition: all .5s cubic-bezier(.7, 0, .3, 1) 0s !important;
     margin-top: -14px !important;
+    position: relative;
 }
 
 .ps-product__actions li {
@@ -1329,7 +1324,7 @@ ul.privacypl li a:hover {
     position: absolute;
     right: -6px;
     vertical-align: top;
-    width: 20px;
+    min-width: 20px;
 }
 
 .header__extra span i {
@@ -1432,12 +1427,47 @@ ul.select2-choices:after {
     background-color: #f5d002;
 }
 
+#SnackIt li.list-item {
+    padding: 0 0 0 20px;
+    border-bottom: solid 2px gray;
+}
+
 @media (max-width: 578px) {
     button.add-to-cart-button {
         padding: 4px 10px !important;
-        top: -17px !important;
+        /* top: -17px !important; */
     }
-    .ps-products-listing .col-6{
+
+    .ps-products-listing .col-6 {
         padding: 0 5px;
     }
+
+    .nav-holderinner .nav-link {
+        font-size: 13px;
+        line-height: 13px;
+        margin: 0 10px;
+    }
+
+    #SnackIt li.list-item {
+        padding: 0;
+    }
+
+    .copyright-area {
+        text-align: left;
+    }
+
+    .footer-social {
+        margin: 0 0 10px 0;
+    }
+
+    .ps-table--compare tbody tr td {
+        min-width: auto;
+    }
+    .ps-compare .ps-btn, .ps-compare button.ps-btn{
+        padding: 5px;
+    }
+    #SnackIt li.list-item {
+        border-bottom: none;
+    }
 }
+
